Sync all content

--- a/content/resources/15-968s05-th.md
+++ b/content/resources/15-968s05-th.md
@@ -5,6 +5,8 @@ description: Fresh grapes sold at a farmers market in North Carolina. (Image cou
 file: /courses/15-968-the-sociology-of-strategy-spring-2005/a8c9939add72321d2f3fdc5bc6bdba25_15-968s05-th.jpg
 file_size: 11838
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Fresh grapes sold at a farmers market in North Carolina. (Image courtesy
     of {{% resource_link "c51ac798-7944-4f06-9d5b-d6ed3091d2fe" "saidunsaids" %}}.)
