--- a/content/resources/15-968s05.md
+++ b/content/resources/15-968s05.md
@@ -5,6 +5,8 @@ description: Fresh grapes sold at a farmers market in North Carolina. (Image cou
 file: /courses/15-968-the-sociology-of-strategy-spring-2005/4d0369d5b65186af68b9e60cdcda1a50_15-968s05.jpg
 file_size: 135444
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Fresh grapes sold at a farmers market in North Carolina. (Image courtesy
     of {{% resource_link "c51ac798-7944-4f06-9d5b-d6ed3091d2fe" "saidunsaids" %}}.)
